# squadmakers-test

./: Dockerfile  README.md  docker-compose.yaml  makefile  pyproject.toml
migrations/: elasticsearch_migration.py
source/: main.py
source/adapters/controllers/: joke.py  math.py
source/adapters/models/: joke.py
source/adapters/repositories/joke/: elasticsearch.py  fake.py
source/adapters/requests/: fake.py  joke.py
source/domain/: math.py
source/domain/entities/: joke.py
source/infraestructure/: elasticsearch.py  env.py  request.py
source/ports/: joke.py  request.py
source/services/: joke.py  math.py
tests/: conftest.py  test_joke_model.py  test_math_domain.py  test_math_service.py  test_model_joke.py  test_port_joke.py  test_repository_joke.py  test_service_joke.py
