[tool.poetry]
name = "joke"
version = "0.1.0"
description = ""
authors = ["pedro ochoa <pluvet01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
httpx = "^0.22.0"
elasticsearch = {extras = ["async"], version = "^8.4.1"}

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
