[tool.poetry]
name = "joke"
version = "0.1.0"
description = ""
authors = ["pedro ochoa <pluvet01@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.75.0"
uvicorn = "^0.17.6"
httpx = "^0.22.0"
elasticsearch = "7.17"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-mock = "^3.8.2"
pytest-asyncio = "^0.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
